<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <Button
        android:id="@+id/button6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonInput"
        android:text="@string/Left_Paren"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button15"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonInput"
        android:text="@string/Add"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button16"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonInput"
        android:text="@string/Eight"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button9"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="124dp"
        android:onClick="buttonInput"
        android:text="@string/three"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button10"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="buttonInput"
        android:text="@string/one"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button11"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="124dp"
        android:onClick="buttonInput"
        android:text="@string/two"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="buttonInput"
        android:text="@string/Seven"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button12"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="buttonInput"
        android:text="@string/Four"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button19"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonClear"
        android:text="@string/button_clear"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button17"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonInput"
        android:text="@string/Nine"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button14"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonInput"
        android:text="@string/Six"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button5"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonInput"
        android:text="@string/Zero"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button13"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonInput"
        android:text="@string/Five"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonInput"
        android:text="@string/Divide"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button8"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonInput"
        android:text="@string/Multiply"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonInput"
        android:text="@string/Right_Paren"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/button18"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="buttonInput"
        android:text="@string/Subtract"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="buttonBackspace"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:srcCompat="@android:drawable/ic_input_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>